--- a/etapas.html
+++ b/etapas.html
@@ -13,6 +13,13 @@
 <header class="header">
     <div class="header-content">
         <img src="logo_site.png" alt="Logo do Site" class="logo">
+<!-- Botão hambúrguer (visível apenas no mobile) -->
+    <div class="menu-hamburguer">
+	    <span></span>
+	    <span></span>
+	    <span></span>
+    </div>
+<!-- Menu de navegação -->		
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,112 +32,97 @@
     </div>
 </header>
 		
-		<!-- Reunião inicial -->
-		<tr>
-			<td class="texto-lado-esquerdo" style="padding-left:8.5%" >
-				<h2 class="titulo-processo">Nosso processo </h2>
-				<h3 class="numero-etapa">01 </h3>
-				<h3 class="nome-etapa">Reunião incial </h3>
-				<p class="paragrafo-processo"> Primeiro, realizamos uma reunião com o </p>
-				<p class="paragrafo-processo"> cliente para entender suas necessidades, </p>
-				<p class="paragrafo-processo">desejos e expectativas.</p>
-        		<p class="paragrafo-processo"> Discutimos o conceito de sustentabilidade e</p>
-				<p class="paragrafo-processo">como ele pode ser integrado ao projeto.</p>
-        		<p class="paragrafo-processo">Essa conversa é uma base sólida para o</p>
-				<p class="paragrafo-processo">desenvolvimento da nossa solução.</p>
-			</td>
-			<td class="elemento" style="margin-right:100%; padding-left:100px; padding-top:150px">
-               <img src="reuniao_inicial.jpg" alt="Mulheres conversando em um ambiente de trabalho" style="width:80%; height: auto; border-radius: 15px; margin-top: 100px;">
-            </td>
-        </tr>
+	<!-- Título Etapas  -->
+<div class="etapa-titulo">
+    <h2 style="margin-top: 155px;">Nosso processo</h2>
+</div>
+
+<div class="processo">
+    <!-- Reunião Inicial -->
+    <div class="etapa">
+        <div class="texto-lado-esquerdo">
+            <h3 class="numero-etapa">01</h3>
+            <h3 class="nome-etapa">Reunião inicial</h3>
+            <p class="paragrafo-processo">Primeiro, realizamos uma reunião com o cliente para entender suas necessidades, desejos e expectativas.</p>
+            <p class="paragrafo-processo">Discutimos o conceito de sustentabilidade e como ele pode ser integrado ao projeto.</p>
+            <p class="paragrafo-processo">Essa conversa é uma base sólida para o desenvolvimento da nossa solução.</p>
+        </div>
+        <div class="imagem-lado-direito">
+            <img src="reuniao_inicial.jpg" alt="Mulheres conversando em um ambiente de trabalho" class="img-processo">
+        </div>
+    </div>
 		
-		<!-- Design e desenvolvimento -->
-		<tr>
-			<td class="imagem-lado-esquerdo" style="padding-left:8.5%; overflow:hidden; border-radius:15px;"">
-				<img src="design_desenvolvimento.png" alt="Mãos de duas pessoas segurando amostras de paletas de cores em um ambiente de trabalho de design de interiores" style="width:80%; height: auto; padding-top:35px; border-radius: 15px;">
-        	</td>
-				<td class="texto-lado-direito" style="padding-right:8.5%" >
-		    <div class="texto-container">
-				<h3 class="numero-etapa" margin-left: 70px >02 </h3>
-				<h3 class="nome-etapa">Design e desenvolvimento </h3>
-				<p class="paragrafo-processo"> Com as informações coletadas, nossa equipe começa a esboçar as ideias iniciais.</p>
-				<p class="paragrafo-processo"> Aqui, criamos conceitos de design, moodboards e selecionamos referências que priorizam materiais ecológicos e soluções inovadoras.</p>
-        		<p class="paragrafo-processo"> O objetivo é desenvolver um layout funcional e esteticamente agradável que reflita a visão do cliente.</p>
-		    </div>
-			</td>
-        </tr>
+
+    <!-- Design e Desenvolvimento -->
+    <div class="etapa">
+        <div class="imagem-lado-esquerdo">
+            <img src="design_desenvolvimento.png" alt="Mãos segurando amostras de paletas de cores" class="img-processo">
+        </div>
+        <div class="texto-lado-direito">
+            <h3 class="numero-etapa">02</h3>
+            <h3 class="nome-etapa">Design e desenvolvimento</h3>
+            <p class="paragrafo-processo">Com as informações coletadas, nossa equipe começa a esboçar as ideias iniciais.</p>
+            <p class="paragrafo-processo">Aqui, criamos conceitos de design, moodboards e selecionamos referências que priorizam materiais ecológicos.</p>
+            <p class="paragrafo-processo">O objetivo é desenvolver um layout funcional e esteticamente agradável que reflita a visão do cliente.</p>
+        </div>
+    </div>
 	
-		<!-- Desenho técnico -->
-		<tr>
-			<td class="texto-lado-esquerdo" style="padding-left:8.5%" >
-				<h3 class="numero-etapa">03 </h3>
-				<h3 class="nome-etapa">Desenho técnico </h3>
-				<p class="paragrafo-processo"> Após a aprovação do conceito, passamos para</p>
-				<p class="paragrafo-processo">a criação dos desenhos técnicos.</p>
-        		<p class="paragrafo-processo">Essa fase envolve a elaboração de plantas,</p> 
-				<p class="paragrafo-processo">cortes e detalhes que orientam a execução do 
-                <p class="paragrafo-processo">projeto.</p>				
-        		<p class="paragrafo-processo"> Garantimos que todos os aspectos técnicos</p>
-				<p class="paragrafo-processo">estejam em conformidade com as normas de</p>
-				<p class="paragrafo-processo">construção e sustentabilidade.</p>
-			</td>
-			<td class="elemento" style="margin-right:100%; padding-left:100px;">
-               <img src="desenhotec.jpg" alt="Mesa de trabalho organizada para um projeto de design, com foco em uma pessoa usando uma mesa digitalizadora com uma caneta." class="img-processo">
-            </td>
-        </tr>
+		<!-- Desenho Técnico -->
+    <div class="etapa">
+        <div class="texto-lado-esquerdo">
+            <h3 class="numero-etapa">03</h3>
+            <h3 class="nome-etapa">Desenho técnico</h3>
+            <p class="paragrafo-processo">Após a aprovação do conceito, passamos para a criação dos desenhos técnicos.</p>
+            <p class="paragrafo-processo">Essa fase envolve a elaboração de plantas, cortes e detalhes que orientam a execução do projeto.</p>
+            <p class="paragrafo-processo">Garantimos que todos os aspectos técnicos estejam em conformidade com as normas de construção e sustentabilidade.</p>
+        </div>
+        <div class="imagem-lado-direito">
+            <img src="desenhotec.jpg" alt="Mesa de trabalho organizada para um projeto de design" class="img-processo">
+        </div>
+    </div>
 		
 		<!-- Execução e gestão -->
-		<tr>
-			<td class="imagem-lado-esquerdo" style="padding-left:8.5%; overflow:hidden; border-radius:15px;">
-				<img src="execgestao.png" alt="" class="img-processo">
-			</td>
-			<td class="texto-lado-direito" style="padding-right:8.5%" >
-			<div class="texto-container">
-				<h3 class="numero-etapa">04 </h3>
-				<h3 class="nome-etapa">Execução e gestão </h3>
-				<p class="paragrafo-processo"> Com os desenhos prontos, iniciamos a fase de execução.</p> 
-				<p class="paragrafo-processo"> Nesta etapa, gerenciamos todas as atividades do projeto, coordenando a equipe e os fornecedores.</p>
-				<p class="paragrafo-processo"> Monitoramos prazos e orçamentos, assegurando que o projeto avance de acordo com o planejado e respeitando o meio ambiente.</p>
-		    </div>
-			</td>
-        </tr>
+		<div class="etapa">
+        <div class="imagem-lado-esquerdo">
+            <img src="execgestao.png" alt="" class="img-processo">
+        </div>
+        <div class="texto-lado-direito">
+            <h3 class="numero-etapa">04</h3>
+            <h3 class="nome-etapa">Execução e gestão</h3>
+            <p class="paragrafo-processo">Com os desenhos prontos, iniciamos a fase de execução.</p>
+            <p class="paragrafo-processo">Nesta etapa, gerenciamos todas as atividades do projeto, coordenando a equipe e os fornecedores.</p>
+            <p class="paragrafo-processo">Monitoramos prazos e orçamentos, assegurando que o projeto avance de acordo com o planejado e respeitando o meio ambiente.</p>
+        </div>
+    </div>
 		
-		<!-- Instalação e acabamento -->
-		<tr>
-			<td class="texto-lado-esquerdo" style="padding-left:8.5%" >
+<!-- Instalação e acabamento -->
+		<div class="etapa">
+		    <div class="texto-lado-esquerdo">
 				<h3 class="numero-etapa">05 </h3>
 				<h3 class="nome-etapa">Instalação e acabamento </h3>
-				<p class="paragrafo-processo"> Chegamos à fase de instalação, onde os 
-				<p class="paragrafo-processo"> elementos de design são colocados em</p> 
-                <p class="paragrafo-processo"> prática.</p>
-				<p class="paragrafo-processo"> Isso inclui a montagem de móveis, a aplicação</p>
-				<p class="paragrafo-processo"> de acabamentos e a integração de soluções</p>
-				<p class="paragrafo-processo"> sustentáveis, como sistemas de eficiência</p>
-				<p class="paragrafo-processo"> energética.</p>
-				<p class="paragrafo-processo"> Garantimos que cada detalhe esteja perfeito e</p>					
-				<p class="paragrafo-processo"> alinhado à visão do projeto.</p>
-	    	</td>
-			<td class="elemento" style="margin-right:100%; padding-left:100px;">
+				<p class="paragrafo-processo"> Chegamos à fase de instalação, onde os elementos de design são colocados em prática.</p>
+				<p class="paragrafo-processo"> Isso inclui a montagem de móveis, a aplicação de acabamentos e a integração de soluções sustentáveis, como sistemas de eficiência energética.</p>
+				<p class="paragrafo-processo"> Garantimos que cada detalhe esteja perfeito e alinhado à visão do projeto.</p>
+	    	</div>
+			<div class="imagem-lado-direito">
                <img src="instalação.png" alt="" class="img-processo">
-            </td>
-        </tr>
+        </div>
+    </div>
 		
 		<!-- Avaliação final e entrega -->
-		<tr>
-			<td class="imagem-lado-esquerdo" style="padding-left:8.5%; overflow:hidden; border-radius:15px;">
-				<img src="avaliação.png" alt="" class="img-processo">
-			</td>
-			<td class="texto-lado-direito" style="padding-right:8.5%" >
-			<div class="texto-container">
-				<h3 class="numero-etapa">06 </h3>
-				<h3 class="nome-etapa">Avaliação final e entrega </h3>
-				<p class="paragrafo-processo"> Por fim, realizamos uma avaliação completa do espaço.</p>
-				<p class="paragrafo-processo"> Verificamos se todos os requisitos foram atendidos e se o resultado final corresponde às expectativas do cliente.</p>
-				<p class="paragrafo-processo"> Após ajustes finais, entregamos o projeto, proporcionando ao cliente uma experiência única e sustentável.</p>
-			</div>
-			</td>
-		</tr>
-	</table>
+		<div class="etapa">
+        <div class="imagem-lado-esquerdo">
+		    <img src="avaliação.png" alt="" class="img-processo">
+		</div>
+		<div class="texto-lado-direito">
+			<h3 class="numero-etapa">06 </h3>
+			<h3 class="nome-etapa">Avaliação final e entrega </h3>
+			<p class="paragrafo-processo"> Por fim, realizamos uma avaliação completa do espaço.</p>
+			<p class="paragrafo-processo"> Verificamos se todos os requisitos foram atendidos e se o resultado final corresponde às expectativas do cliente.</p>
+			<p class="paragrafo-processo"> Após ajustes finais, entregamos o projeto, proporcionando ao cliente uma experiência única e sustentável.</p>
+		</div>
+    </div>
+</div>
 
 <footer>
         <div class="footer-container">
@@ -140,6 +132,15 @@
             </div>
         </div>
 </footer>
+
+<script>
+    const menuHamburguer = document.querySelector('.menu-hamburguer');
+    const menu = document.querySelector('.menu');
+
+    menuHamburguer.addEventListener('click', () => {
+        menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+    });
+</script>
 
 </body>
 </html>
