--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <!-- Cabeçalho com o logo -->
 <header class="header">
     <div class="header-content">
-        <img src="logo_site.png" alt="Logo do Site" class="logo">
+        <img src="logo_site.png" alt="Logo do Site" class="logo">		
+<!-- Botão hambúrguer (visível apenas no mobile) -->
+        <div class="menu-hamburguer">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+<!-- Menu de navegação -->
         <nav class="menu">
             <ul>
                 <li><a href="index.html" style="background-color: #B7CB9E" class="active">Home</a></li>
@@ -25,80 +32,42 @@
     </div>
 </header>
 
-        <!-- Imagem Inicial -->
-        <tr>
-            <td colspan="2" style="overflow:hidden">
-                <img src="header.png" alt="Imagem de fundo" class="imagem-largura-total" style="overflow:hidden">
-            </td>
-        </tr>
+<!-- Imagem inicial -->
+<div class="imagem-inicial">
+    <img src="header.png" alt="Imagem de fundo" class="imagem-largura-total">
+</div>
 
-        <!-- Seção Sobre o Estúdio -->
-		</tr>
-            <td class="imagem-lado-esquerdo" style="padding-left:8.5%">
-                <img src="imagem_cadeira.png" alt="Descrição da Imagem" style="width:75%; height: auto">
-            </td>
-            <td class="texto-lado-direito" style="padding-right:8.5%;">
-				<h2 style="font-size:44px;color:#0E5935">Sobre o estúdio </h2>
-                <p>O Oikos surgiu da vontade de transformar ambientes de forma consciente, unindo funcionalidade e beleza a práticas sustentáveis.</p>
-                <p>O nome “Oikos” vem do grego e significa “lar”, refletindo nosso compromisso em criar espaços que respeitam o planeta e que proporcionam conforto para as pessoas também.</p>
-                <p>Cada detalhe, desde a escolha dos materiais até o uso eficiente dos recursos, é pensado em valorizar tanto a estética quanto a natureza.</p>
-            </td>
-        </tr>
+<!-- Seção Sobre o Estúdio -->
+<div class="sobre-o-estudio">
+    <div class="imagem-lado-esquerdo">
+        <img src="imagem_cadeira.png" alt="Descrição da Imagem">
+    </div>
+    <div class="texto-lado-direito">
+            <h2>Sobre o estúdio</h2>
+            <p>O Oikos surgiu da vontade de transformar ambientes de forma consciente, unindo funcionalidade e beleza a práticas sustentáveis.</p>
+            <p>O nome “Oikos” vem do grego e significa “lar”, refletindo nosso compromisso em criar espaços que respeitam o planeta e que proporcionam conforto para as pessoas também.</p>
+            <p>Cada detalhe, desde a escolha dos materiais até o uso eficiente dos recursos, é pensado em valorizar tanto a estética quanto a natureza.</p>
+    </div>
+</div>
 
-        <!-- Seção Quadrado Verde com Estatísticas -->
-            <tr style="margin-left:2%;margin-right:2%;border-radius: 10px;border-radius: 15px; border-collapse: separate; overflow: hidden;">
-                <td colspan="2" class="quadrado-verde" >
-                    <table class="stats-table">
-                        <tr>
-                            <td>
-                                <h2 style="font-size:44px;color:#0E5935; margin-left: 70px;">Visão geral</h2>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="padding-left:5%; padding-bottom:6.5%;width:45%;">
-                                <h2 style="font-size:60px;padding-top:60px;color:#0E5935">10</h2>
-                                <p style="font-size:35px; padding:0; font-weight: 600; color:#0E5935">anos de experiência</p>
-                            </td>
-                            <td style="padding-left:5%; width:55%">
-                                <img src="planta_sofá.png" alt="Descrição da imagem" class="responsive-img">
-                            </td>
-                        </tr>
-                    </table>
-                    <table class="stats-table">
-                        <tr>
-                            <td style="padding-left:5%; width:55%">
-                                <img src="sala_plantas.png" alt="Descrição da imagem" class="responsive-img">
-                            </td>
-                            <td style="width:45%;">
-                                <div style="display: inline-block; vertical-align: top; margin-right: 20px;margin-left:2%">
-                                    <h2 style="font-size:60px;color:#0E5935;font-weight: 650;">+300</h2>
-                                    <p style="font-size:35px;color:#0E5935;font-weight: 600;">projetos concluídos</p>
-                                </div>
-                                <div style="padding-right:5%; display: inline-block; vertical-align: top;">
-                                    <h2 style="font-size:60px;padding-left:20px;color:#0E5935;font-weight: 650;">18</h2>
-                                    <p style="font-size:35px;padding-left:20px;color:#0E5935;font-weight: 600;">prêmios</p>
-                                </div>
+<!-- Seção Quadrado Verde com Estatísticas -->
+<div class="imagem-quadrado">
+	    <img src="visaogeral.png" alt="Descrição da Imagem">
+</div>	
 
-                            </td>
-                        </tr>
-                    </table>
-		    	</td>
-		    </tr>
-
-        <!-- Seção Importância e Propósito -->
-        </tr>
-            <td class="texto-lado-esquerdo" style="padding-left:8.5%; padding-right:30px;">
-			   <h2 style="font-size:44px;color:#0E5935">Importância e propósito</h2>
-               <p>Acreditamos que o design de interiores vai além da estética; ele é uma ferramenta para transformar a maneira como interagimos com o mundo.</p>
-               <p>Nosso propósito é criar ambientes aconchegantes que impactem positivamente o bem-estar das pessoas e o equilíbrio do planeta.</p>
-               <p>Trabalhamos para promover práticas de design sustentável, valorizando materiais ecológicos e soluções que minimizem o impacto ambiental.</p>
-               <p>Mais do que projetar espaços, buscamos inspirar uma nova consciência sobre o valor de viver em harmonia com o meio ambiente.</p>
-            </td>
-            <td class="elemento" style="margin-right:100%; padding-left:200px;">
-               <img src="mulher_plantas.png" alt="Descrição da Imagem" style="width:70%; height: auto">
-            </td>
-        </tr>
-    </table>
+<!-- Seção Importância e Propósito -->
+<div class="importancia-proposito">
+    <div class="texto-lado-esquerdo">
+	        <h2>Importância e propósito</h2>
+            <p>Acreditamos que o design de interiores vai além da estética; ele é uma ferramenta para transformar a maneira como interagimos com o mundo.</p>
+            <p>Nosso propósito é criar ambientes aconchegantes que impactem positivamente o bem-estar das pessoas e o equilíbrio do planeta.</p>
+            <p>Trabalhamos para promover práticas de design sustentável, valorizando materiais ecológicos e soluções que minimizem o impacto ambiental.</p>
+            <p>Mais do que projetar espaços, buscamos inspirar uma nova consciência sobre o valor de viver em harmonia com o meio ambiente.</p>
+	</div>		
+    <div class="imagem-lado-direito">
+        <img src="mulher_plantas.png" alt="Descrição da Imagem">
+    </div>
+</div>
 	
 <!-- Contêiner pai -->
 <div class="container">
@@ -117,6 +86,14 @@
         </div>
 </footer>
 
+<script>
+    const menuHamburguer = document.querySelector('.menu-hamburguer');
+    const menu = document.querySelector('.menu');
+
+    menuHamburguer.addEventListener('click', () => {
+        menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+    });
+</script>
 
 
 </body>
