--- a/serviços.html
+++ b/serviços.html
@@ -13,6 +13,13 @@
 <header class="header">
     <div class="header-content">
         <img src="logo_site.png" alt="Logo do Site" class="logo">
+<!-- Botão hambúrguer (visível apenas no mobile) -->
+<div class="menu-hamburguer">
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
+<!-- Menu de navegação -->
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,89 +33,74 @@
 </header>
 		
 	<!-- Nossos serviços -->
-        <tr>
-            <td class="texto-lado-esquerdo" style="padding-left:8.5%" >
-	    	    <h2 style="font-size:44px;color:#0E5935; margin-top: 155px">Nossos serviços </h2>
-            </td>
-        </tr>
-		<tr>
-			<td class="texto-lado-esquerdo" style="padding-left:8.5%" >
-                <div class="servicos-container">
-                    <div class="servico-item">
-                        <img src="casa.png" alt="Ícone de Projetos Residenciais" class="icone">
-                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Projetos residenciais</h3>
-                        <p style="font-size: 22px;"> Planejamento personalizado de espaços residenciais, focado em criar ambientes confortáveis, funcionais e sustentáveis.</p>
-						<p style="font-size: 22px;"> Cada projeto visa atender às necessidades dos moradores, utilizando materiais e técnicas que reduzem o impacto ambiental.</p>
-                    </div>
-                </div>
-            </td>
-			<td class="texto-lado-esquerdo" style="padding-left:8.5%;" >
-                <div class="servicos-container">
-                    <div class="servico-item">
-                        <img src="comercio.png" alt="Ícone Comercial" class="icone">
-                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Projetos comerciais</h3>
-                        <p style="font-size: 22px;"> Soluções de design para espaços comerciais que equilibram estética e eficiência, promovendo uma experiência agradável para clientes e colaboradores.  </p>
-                        <p style="font-size: 22px;"> O foco é otimizar o uso dos recursos, incorporando práticas sustentáveis ao ambiente de trabalho.</p>
-                    </div>
-                </div>
-            </td>
-        </tr>
+<div class="nossos-servicos" style="text-align: center;">
+    <div class="titulo-servicos">
+        <h2 style>Nossos serviços</h2>
+    </div>
 
-        <tr>
-            <td class="texto-lado-esquerdo" style="padding-left:8.5%;" >
-                <div class="servicos-container">
-                    <div class="servico-item" style="padding-bottom: 47px;padding-top:47px">
-                        <img src="modelagem-3d.png"; alt="Ícone Visualização 3D" class="icone icone-ajuste">
-                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Visualização 3D</h3>
-                        <p style="font-size: 22px;"> Criação de modelos tridimensionais para ajudar na visualização dos projetos antes da execução. </p>
-                        <p style="font-size: 22px;"> Essa tecnologia permite simular texturas, iluminação e disposição de móveis, facilitando o planejamento e a tomada de decisões de forma prática e realista.</p>
-                    </div>
-                </div>
-                <td class="texto-lado-esquerdo" style="padding-left:8.5%;">
-                    <div class="servicos-container">
-                        <div class="servico-item">
-                         <img src="moveis.png" alt="" class="icone">
-                            <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Design de móveis</h3>
-                            <p style="font-size: 22px;"> Desenvolvimento de móveis e peças decorativas sustentáveis, utilizando materiais de baixo impacto ambiental e priorizando o design atemporal e funcional. </p>
-                            <p style="font-size: 22px;"> Ideal para quem busca decoração que alie beleza e responsabilidade ambiental.</p>
-                        </div>
-                    </div>
-                </td>
-            </td>
-        </tr>
-
-        <tr>
-            <td class="texto-lado-esquerdo" style="padding-left:8.5%;">
-                <div class="servicos-container">
-                    <div class="servico-item" style="padding-bottom: 80px;padding-top:80px">
-                     <img src="paisagem.png" alt="" class="icone icone-ajustar">
-                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Paisagismo</h3>
-                        <p style="font-size: 22px;"> Planejamento de áreas verdes integradas ao ambiente, com espécies nativas e técnicas de baixo consumo de água. </p>
-                        <p style="font-size: 22px;"> O paisagismo sustentável melhora a qualidade de vida e contribui para a biodiversidade local, transformando o espaço em um refúgio natural.</p>
-                    </div>
-                </div>
-            </td>
-            <td class="texto-lado-esquerdo" style="padding-left:8.5%">
-                <div class="servicos-container">
-                    <div class="servico-item">
-                     <img src="casa-sustentavel.png" alt="" class="icone">
-                        <h3 style="font-size:35px;color:#0E5935; font-weight: 600; margin-top: 5px; margin-bottom: 10px">Consultoria</h3>
-                        <p style="font-size: 22px;"> Avaliação de ambientes e orientações para tornar o espaço mais sustentável, com sugestões sobre eficiência energética, reaproveitamento de recursos e muito mais.  </p>
-                        <p style="font-size: 22px;"> Transformação consciente do ambiente, sem necessidade de grandes reformas.</p>
-                    </div> 
-                </div>
-            </td>
-        </tr>
-    </table>
-	
-<footer>
-        <div class="footer-container">
-            <img src="rodapé.png" alt="Descrição da Imagem" class="footer-image">
-            <div class="footer-text">
-                <p>Copyright © 2024 - Estúdio Oikos</p>
-            </div>
+    <!-- Container único para a grade -->
+    <div class="servicos-container">
+        <div class="servico-item">
+            <img src="casa.png" alt="Ícone de Projetos Residenciais" class="icone">
+            <h3>Projetos residenciais</h3>
+            <p>Planejamento personalizado de espaços residenciais, focado em criar ambientes confortáveis, funcionais e sustentáveis.</p>
+            <p>Cada projeto visa atender às necessidades dos moradores, utilizando materiais e técnicas que reduzem o impacto ambiental.</p>
         </div>
+
+        <div class="servico-item">
+            <img src="comercio.png" alt="Ícone Comercial" class="icone">
+            <h3>Projetos comerciais</h3>
+            <p>Soluções de design para espaços comerciais que equilibram estética e eficiência, promovendo uma experiência agradável para clientes e colaboradores.</p>
+            <p>O foco é otimizar o uso dos recursos, incorporando práticas sustentáveis ao ambiente de trabalho.</p>
+        </div>
+
+        <div class="servico-item">
+            <img src="modelagem-3d.png" alt="Ícone Visualização 3D" class="icone">
+            <h3>Visualização 3D</h3>
+            <p>Criação de modelos tridimensionais para ajudar na visualização dos projetos antes da execução.</p>
+            <p>Essa tecnologia permite simular texturas, iluminação e disposição de móveis, facilitando o planejamento e a tomada de decisões de forma prática e realista.</p>
+        </div>
+
+        <div class="servico-item">
+            <img src="moveis.png" alt="Ícone Design de móveis" class="icone">
+            <h3>Design de móveis</h3>
+            <p>Desenvolvimento de móveis e peças decorativas sustentáveis, utilizando materiais de baixo impacto ambiental e priorizando o design atemporal e funcional.</p>
+            <p>Ideal para quem busca decoração que alie beleza e responsabilidade ambiental.</p>
+        </div>
+
+        <div class="servico-item">
+            <img src="paisagem.png" alt="Ícone Paisagismo" class="icone">
+            <h3>Paisagismo</h3>
+            <p>Planejamento de áreas verdes integradas ao ambiente, com espécies nativas e técnicas de baixo consumo de água.</p>
+            <p>O paisagismo sustentável melhora a qualidade de vida e contribui para a biodiversidade local, transformando o espaço em um refúgio natural.</p>
+        </div>
+
+        <div class="servico-item">
+            <img src="casa-sustentavel.png" alt="Ícone Consultoria" class="icone">
+            <h3>Consultoria</h3>
+            <p>Avaliação de ambientes e orientações para tornar o espaço mais sustentável, com sugestões sobre eficiência energética, reaproveitamento de recursos e muito mais.</p>
+            <p>Transformação consciente do ambiente, sem necessidade de grandes reformas.</p>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <div class="footer-container">
+        <img src="rodapé.png" alt="Descrição da Imagem" class="footer-image">
+        <div class="footer-text">
+            <p>Copyright © 2024 - Estúdio Oikos</p>
+        </div>
+    </div>
 </footer>
+
+<script>
+    const menuHamburguer = document.querySelector('.menu-hamburguer');
+    const menu = document.querySelector('.menu');
+
+    menuHamburguer.addEventListener('click', () => {
+        menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+    });
+</script>
 
 </body>
 </html>
