--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contato.css">
+	<link rel="icon" type="image/png" href="favicon.png">
     <title>Estúdio Oikos: Contato</title>
 </head>
 <body style="background-color:#FFFCE2; margin: 0; padding: 0; overflow-x: hidden;">
